<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".act.NewQuestionAct">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbDeleteImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:onClick="onClickDeleteImage"
        app:backgroundTint="@color/orange"
        app:layout_constraintEnd_toStartOf="@+id/fbEditImage"
        app:layout_constraintTop_toTopOf="@+id/fbEditImage"
        app:srcCompat="@drawable/ic_delete_image" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbEditImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="onClickEditImage"
        app:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="@+id/imMain"
        app:layout_constraintTop_toTopOf="@+id/imMain"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_edit" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1279dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1279dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1279dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1279dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1279dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_def_image" />

    <EditText
        android:id="@+id/edQuestion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_question"
        android:inputType="textMultiLine|textPersonName"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/imMain"
        app:layout_constraintStart_toStartOf="@+id/imMain"
        app:layout_constraintTop_toTopOf="@+id/guideline1" />

    <EditText
        android:id="@+id/edRightAnswer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_answer_1"
        android:inputType="textMultiLine|textPersonName"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/edQuestion"
        app:layout_constraintStart_toStartOf="@+id/edQuestion"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/edFalseAnswer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_answer_2"
        android:inputType="textMultiLine|textPersonName"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="@+id/edRightAnswer"
        app:layout_constraintStart_toStartOf="@+id/edRightAnswer"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <EditText
        android:id="@+id/edFalseAnswer2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_answer_3"
        android:inputType="textMultiLine|textPersonName"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="@+id/edFalseAnswer"
        app:layout_constraintStart_toStartOf="@+id/edFalseAnswer"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/edFalseAnswer3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_answer_4"
        android:inputType="textMultiLine|textPersonName"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edFalseAnswer2"
        app:layout_constraintStart_toStartOf="@+id/edFalseAnswer2"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <EditText
        android:id="@+id/edTitleQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/title_q"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imMain"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imMain"
        app:layout_constraintTop_toTopOf="@+id/imMain" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/orange"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="@+id/imMain"
        app:layout_constraintStart_toStartOf="@+id/imMain"
        app:layout_constraintTop_toBottomOf="@+id/edTitleQuestion" />

</androidx.constraintlayout.widget.ConstraintLayout>